<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="moviePageVM" type="com.application.app.modules.moviepage.data.viewmodel.MoviePageVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMoviePage"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyledeep_purple_A400">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup4"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25pxv"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/lineLine1">
            <ImageView android:id="@+id/imageHome"
                android:layout_height="@dimen/_50pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_60pxh"
                android:layout_width="@dimen/_50pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_home"
                app:layout_constraintBottom_toBottomOf="@+id/imagePluscircle"
                app:layout_constraintEnd_toStartOf="@+id/imagePluscircle"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <ImageView android:id="@+id/imageVector"
                android:layout_height="@dimen/_48pxh"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_48pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toEndOf="@+id/imagePluscircle" app:layout_constraintTop_toTopOf="@+id/imagePluscircle"/>
            <View android:id="@+id/viewSlice1"
                android:layout_height="@dimen/_140pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_10pxh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageVector"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintStart_toStartOf="@+id/imageVector" app:layout_constraintTop_toTopOf="@+id/imageVector"/>
            <ImageView android:id="@+id/imagePluscircle"
                android:layout_height="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_90pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_50pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_pluscircle"
                app:layout_constraintBottom_toBottomOf="@+id/imageVector"
                app:layout_constraintEnd_toStartOf="@+id/imageVector"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/imageHome" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View android:background="@color/white_A700"
            android:id="@+id/lineLine1"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_59pxv"
            android:layout_width="@dimen/_428pxh"
            app:layout_constraintBottom_toTopOf="@+id/constraintGroup4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/constraintGroup7"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_radius_20"
            android:id="@+id/viewRectangle1"
            android:layout_height="@dimen/_394pxv"
            android:layout_marginEnd="@dimen/_56pxh"
            android:layout_marginStart="@dimen/_56pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_263pxh"
            app:layout_constraintBottom_toTopOf="@+id/constraintGroup8"
            app:layout_constraintEnd_toEndOf="@+id/constraintGroup7"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="@+id/constraintGroup7" app:layout_constraintTop_toTopOf="@+id/constraintGroup7"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup8"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/lineLine1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewRectangle1" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:gravity="start"
                android:id="@+id/txtHereIsWhereY"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="0dp"
                android:text="@{moviePageVM.moviePageModel.txtHereIsWhereY}"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSPIDERMANFA"
                style="@style/txtPoppinsbold20" tools:text="@string/msg_here_is_where_y"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtSPIDERMANFA"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{moviePageVM.moviePageModel.txtSPIDERMANFA}"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/txtHereIsWhereY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtPoppinsbold20" tools:text="@string/msg_spider_man_fa"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup7"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/lineLine1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRecomendations" style="@style/groupStylewhite_A700_abcornerRadius">
            <TextView android:gravity="start"
                android:id="@+id/txtSuscipitTellus"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_245pxv"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="0dp"
                android:text="@{moviePageVM.moviePageModel.txtSuscipitTellus}"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMoreInfo"
                style="@style/txtPoppinsbold20" tools:text="@string/msg_suscipit_tellus"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtMoreInfo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{moviePageVM.moviePageModel.txtMoreInfo}"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/txtSuscipitTellus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtPoppinsbold20" tools:text="@string/lbl_more_info"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtRecomendations"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_72pxh"
            android:layout_marginStart="@dimen/_72pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{moviePageVM.moviePageModel.txtRecomendations}"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/constraintGroup7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/txtPoppinsbold30" tools:text="@string/lbl_recomendations"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
